--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: scala
 scala:
-- 2.13.2
+- 2.13.4
 jdk:
 - openjdk11
-script: sbt clean coverage test core/coverageReport && sbt coverageAggregate
+script: sbt clean coverage +test core/coverageReport && sbt coverageAggregate
 after_success: sbt coveralls $(if [[ "${TRAVIS_PULL_REQUEST}" == "false" && "${TRAVIS_BRANCH}"
   == "master" && "${TRAVIS_TAG}" == "" ]]; then echo "core/publish";  fi)
 env:
