--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -1,6 +1,7 @@
 updates.ignore = [ 
+    { groupId = "co.fs2", artifactId = "fs2-io" },
+    { groupId = "com.github.cb372", artifactId = "cats-retry" },
+    { groupId = "dev.zio", artifactId = "zio-interop-cats" },
     { groupId = "org.scodec", artifactId = "scodec-stream" },
     { groupId = "org.typelevel" },
-    { groupId = "dev.zio", artifactId = "zio-interop-cats" },
-    { groupId = "co.fs2", artifactId = "fs2-io" } 
 ]
